@@ -8,6 +8,9 @@ USER VISIBLE CHANGES BETWEEN TAO-2.0.5 and TAO-2.1.0
   possible collocation, first direct if possible, then through_poa if possible
   else no collocation.
 
+. Enhanced the RW -ORBWaitStrategy and the EXCLUSIVE -ORBTransportMuxStrategy
+  to also work with AMI requests.
+
 USER VISIBLE CHANGES BETWEEN TAO-2.0.4 and TAO-2.0.5
 ====================================================
 
